add get all tasks endpoint
